repo files fixed and sonar qube lints