@@ -7,7 +7,9 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 
+import com.dcode.jobconnect.dto.ApiResponse;
 import com.dcode.jobconnect.dto.JobDTO;
 import com.dcode.jobconnect.dto.SavedJobDTO;
 import com.dcode.jobconnect.entities.Job;
@@ -18,8 +20,6 @@ import com.dcode.jobconnect.utils.SecurityUtils;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
-
 @RestController
 @RequestMapping("/api/saved-jobs")
 @RequiredArgsConstructor
@@ -36,22 +36,24 @@ public class SavedJobController {
  @PostMapping("/{jobId}")
 @PreAuthorize("hasAuthority('CANDIDATE') or hasAuthority('ROLE_CANDIDATE')")
 @Operation(summary = "Save a job by it's jobId")
-public ResponseEntity<?> saveJob(@PathVariable String jobId) {
+public ResponseEntity<ApiResponse<SavedJobDTO>> saveJob(@PathVariable String jobId) {
     User user = SecurityUtils.getCurrentUser();
     Long candidateId = user.getCandidateProfile().getId();
 
     try {
         SavedJob savedJob = savedJobService.saveJob(candidateId, jobId);
-        // Convert to DTO before returning
         SavedJobDTO savedJobDTO = convertToDTO(savedJob);
-        return ResponseEntity.status(HttpStatus.CREATED).body(savedJobDTO);
+        return ResponseEntity.status(HttpStatus.CREATED)
+            .body(new ApiResponse<>(savedJobDTO, null));
     } catch (NoSuchElementException e) {
-        return ResponseEntity.notFound().build();
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+            .body(new ApiResponse<>(null, "Not found"));
     } catch (IllegalStateException e) {
-        return ResponseEntity.status(HttpStatus.CONFLICT).body(e.getMessage());
+        return ResponseEntity.status(HttpStatus.CONFLICT)
+            .body(new ApiResponse<>(null, e.getMessage()));
     } catch (Exception e) {
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                .body("Error saving job: " + e.getMessage());
+            .body(new ApiResponse<>(null, "Error saving job: " + e.getMessage()));
     }
 }
 
@@ -73,19 +75,20 @@ private SavedJobDTO convertToDTO(SavedJob savedJob) {
     @DeleteMapping("/{jobId}")
     @PreAuthorize("hasAuthority('CANDIDATE') or hasAuthority('ROLE_CANDIDATE')")
     @Operation(summary = "Remove a saved job by it's jobId")
-    public ResponseEntity<?> unsaveJob(@PathVariable String jobId) {
+    public ResponseEntity<ApiResponse<Void>> unsaveJob(@PathVariable String jobId) {
         User user = SecurityUtils.getCurrentUser();
     Long candidateId = user.getCandidateProfile().getId();
 
         try {
-            savedJobService.unsaveJob(candidateId, jobId);
-            return ResponseEntity.noContent().build();
-        } catch (NoSuchElementException e) {
-            return ResponseEntity.notFound().build();
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body("Error removing saved job: " + e.getMessage());
-        }
+        savedJobService.unsaveJob(candidateId, jobId);
+        return ResponseEntity.noContent().build();
+    } catch (NoSuchElementException e) {
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .body(new ApiResponse<>(null, "Not found"));
+    } catch (Exception e) {
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(new ApiResponse<>(null, "Error removing saved job: " + e.getMessage()));
+    }
     }
 
     /**
@@ -94,20 +97,19 @@ private SavedJobDTO convertToDTO(SavedJob savedJob) {
     @GetMapping
    @PreAuthorize("hasAuthority('CANDIDATE') or hasAuthority('ROLE_CANDIDATE')")
    @Operation(summary = "Get all saved jobs for the current candidate")
-   public ResponseEntity<?> getSavedJobs() {
-            User user = SecurityUtils.getCurrentUser();
+public ResponseEntity<ApiResponse<List<JobDTO>>> getSavedJobs() {
+    User user = SecurityUtils.getCurrentUser();
     Long candidateId = user.getCandidateProfile().getId();
-        try {
-            List<Job> savedJobs = savedJobService.getSavedJobsByCandidate(candidateId);
-            // Convert Jobs to JobDTOs before returning
-            List<JobDTO> jobDTOs = savedJobs.stream()
-                .map(this::convertToJobDTO)
-                .collect(Collectors.toList());
-            return ResponseEntity.ok(jobDTOs);
-        } catch (Exception e) {
-           throw new RuntimeException("Error fetching saved jobs: " + e.getMessage());
-        }
+    try {
+        List<Job> savedJobs = savedJobService.getSavedJobsByCandidate(candidateId);
+        List<JobDTO> jobDTOs = savedJobs.stream()
+            .map(this::convertToJobDTO)
+            .toList();
+        return ResponseEntity.ok(new ApiResponse<>(jobDTOs, null));
+    } catch (Exception e) {
+       throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Error fetching saved jobs", e);
     }
+}
     private JobDTO convertToJobDTO(Job job) {
         JobDTO dto = new JobDTO();
         dto.setId(job.getId());
@@ -128,18 +130,18 @@ private SavedJobDTO convertToDTO(SavedJob savedJob) {
     @GetMapping("/{jobId}/is-saved")
     @PreAuthorize("hasAuthority('CANDIDATE') or hasAuthority('ROLE_CANDIDATE')")
     @Operation(summary = "Check if a job is saved by the current candidate")
-    public ResponseEntity<?> isJobSaved(@PathVariable String jobId) {
-
-          User user = SecurityUtils.getCurrentUser();
+    public ResponseEntity<ApiResponse<Boolean>> isJobSaved(@PathVariable String jobId) {
+    User user = SecurityUtils.getCurrentUser();
     Long candidateId = user.getCandidateProfile().getId();
-        try {
-            boolean isSaved = savedJobService.isJobSavedByCandidate(candidateId, jobId);
-            return ResponseEntity.ok(isSaved);
-        } catch (NoSuchElementException e) {
-            return ResponseEntity.notFound().build();
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body("Error checking saved status: " + e.getMessage());
-        }
+    try {
+        boolean isSaved = savedJobService.isJobSavedByCandidate(candidateId, jobId);
+        return ResponseEntity.ok(new ApiResponse<>(isSaved, null));
+    } catch (NoSuchElementException e) {
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .body(new ApiResponse<>(null, "Not found"));
+    } catch (Exception e) {
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(new ApiResponse<>(null, "Error checking saved status: " + e.getMessage()));
     }
+}
 }
